# skynetfactory

./: .env.example  .gitignore  README.md  SKYNETFACTORY_FIXES.md  audit_contract.py  audit_crossref.py  audit_v13.py  build_v14.py  final_validation.py  module.contract.json  module.sidecar.json  package.json  pi-session-2026-05-06T20-59-27-599Z_019dff16-a5ee-742c-b656-ba405476f21a.html  pi-session-2026-05-06T21-26-01-001Z_019dff2e-f629-760b-9ea6-0cf39be0283f.html  pi-session-2026-05-06T23-18-25-731Z_019dff95-e0c3-74f9-9798-09ed53316097.html  skynetfactory_authority_contract_v1_1.json  skynetfactory_authority_contract_v1_2.json  skynetfactory_authority_contract_v1_3.json  skynetfactory_authority_contract_v1_4.json  skynetfactory_minimal_codex_prompt_v1_1.txt  skynetfactory_minimal_codex_prompt_v1_2.txt  skynetfactory_minimal_codex_prompt_v1_3.txt  skynetfactory_minimal_codex_prompt_v1_4.txt
orchestration/agent-swarm/: .dockerignore  .env.docker-devin.example  .env.docker.example  .env.example  .gitignore  .wts-config.json  .wts-setup.ts  BUSINESS_USE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.worker  LICENSE  LOCAL_TESTING.md  MCP.md  Makefile  README.md  UI.md  api-entrypoint.sh  biome.json  bunfig.toml  depot.json  docker-compose.example.yml  docker-compose.local.yml  docker-entrypoint.sh  ecosystem.config.cjs  openapi.json  package.json  prek.toml  pyproject.toml  slack-manifest.json  tsconfig.json
orchestration/agent-swarm/.superset/: config.json
orchestration/agent-swarm/assets/: github-cancellation-flows.mmd  (+2 more)
(+1415 files in other folders)
